--- a/components/header.html
+++ b/components/header.html
@@ -14,6 +14,7 @@
     <div class="nav-links">
       <a href="/#home">Home</a>
       <a href="/#about">About</a>
+      <a href="/#tools">Tools</a>
       <a href="/#services">Services</a>
       <a href="/#courses">Courses</a>
       <a href="/pages/blog/index-blog.html">Blog</a>
