Update footer.html updated paths

--- a/components/footer.html
+++ b/components/footer.html
@@ -38,11 +38,9 @@
     <div class="footer-col">
       <h4>Services</h4>
       <ul>
-        <li>Website Creation</li>
+        <li>Starting your Online Business</li>
         <li>Data Dashboards</li>
-        <li>AI Personal Branding</li>
         <li>Telegram Robots</li>
-        <li>Automation Systems</li>
       </ul>
     </div>
 
