--- a/css/components.css
+++ b/css/components.css
@@ -37,10 +37,10 @@
 }
 
 .nav-inner {
-  max-width: 1200px;
+  width: 100%;
   height: 72px;
-  margin: 0 auto;
-  padding: 0 1.5rem;
+  margin: 0;
+  padding: 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
